プロパティファイル追加

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
 spring:
   autoconfigure:
     exclude: org.springframework.boot.devtools.autoconfigure.DevToolsDataSourceAutoConfiguration
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:local}
